Prevent icon being blurred in Chrome because of downscaling of an image; Prevent negative margin applied on vertically oriented toolbar

--- a/js/assets/style.css
+++ b/js/assets/style.css
@@ -11,8 +11,8 @@
     width: 40px;
 }
 
-.urbanismeToolbar.vertical .btn {
-    margin: 0;
+.urbanismeToolbar.vertical .btn-group .btn+.btn {
+    margin-left: 0;
 }
 
 .table-parcelle.table {
